style.css
#border {
  border-style: double;
  border-width: 10px;
  font-family: Verdana, sans-serif;
}

.backgroundGradient {
  background-image: linear-gradient(
    to right,
    rgba(45, 182, 18, 0.986),
    rgb(96, 18, 100),
    rgb(196, 196, 6)
  );
  padding-top: 0.5em;
  padding-bottom: 3em;
}

/* .strong {
  color: purple;
} */

#picture {
  clip-path: circle(30% at 45% 35%);
  height: 10em;
  /* overflow: clip; */
  /* width: 52em; */
  /* border-radius: 50%; */
  margin-bottom: -6em;
  /* margin-right: 0.9%; */
}

#portfolioIcon {
    width: 134px;
    height: 53px;
}
}

#call {
  width: 70px;
  height: 50px;
}

#linkedin {
  width: 70px;
  height: 50px;
}

header {
  /* color: white; */
  display: flex;
  justify-content: flex-end;
  color: white;
  /* justify-content: right; */
  background-color: #333;
  border-style: solid;
  border-width: thin;
  margin: 1em;
  padding: 1em;
}
/* 
header > * {
  width: 30%;
} */

#contact {
  display: flex;
  justify-content: space-around;
  text-align: center;
  padding-top: 2em;
  color: white;
}

:any-link {
  color: white;
}
/* #linkedin {
  color: white;
} */
/* #contact {
  justify-content: space-between;
} */
#contact > * {
  width: 30%;
}

#content {
  text-align: center;
}

/* div.technicalSkills p { */
/* font-weight: bold; */
/* display: inline-flex; */
/* } */

div.education .entry p {
  display: flex;
  /* text-align: end; */
  justify-content: space-between;
  /* margin: 0;  */
}

h2 {
  margin: 0;
  text-align: center;
}
div.education h2 {
  margin: 0;
}
div.experience p {
  margin: 0.25em;
}

div.experience .entry {
  display: flex;
  justify-content: space-between;
  margin: 0;
}

/* div.experience p{ */
/* display: flex; */
/* justify-content: space-between; */
/* } */
/* div.experience .prof{ */
/* margin: 0; */
/* } */
/* .prof {
    display: flex;
    display:block;s
}
.exp {
    text-align: right;
} */
/* div.education .entry p{ */
/* margin: 0; */
/* } */

.columnContainer {
  display: flex;
}

.column {
  flex: 1;
  border-right: 0px;
  border-style: solid;
  margin-top: 3em;
  padding-top: 2em;
}

